# studentmanagementsystem

./: CMakeLists.txt  admindashboard.cpp  admindashboard.h  admindashboard.ui  dbmanager.cpp  dbmanager.h  editablequerymodel.cpp  editablequerymodel.h  facultydashboard.cpp  facultydashboard.h  facultydashboard.ui  gradedelegate.cpp  gradedelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  studentdashboard.cpp  studentdashboard.h  studentdashboard.ui
